<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_main_activity">FragmentExample</string>
    <string name="fragment_btn_text_no">No</string>
    <string name="fragment_btn_text_yes">Yes</string>
    <string name="text_view_header">Cry for a Shadow</string>
    <string name="text_view_content">Many a Beatle fanatic started down the bootleg road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.</string>
    <string name="btn_text_open">open</string>
    <string name="btn_text_close">close</string>
    <string name="image_content_description">image description</string>
    <string name="fragment_text_default">LIKE THE ARTICLE?</string>
    <string name="article_like">ARTICLE: Like</string>
    <string name="article_thanks">ARTICLE: Thanks</string>
</resources>
